adding event list fragment, navigation, adjusting deserializer, moving logic from splash to fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Check-In On Events</string>
+    <string name="app_name">Check-in em Eventos</string>
+    <string name="events_list">Lista de Eventos</string>
 </resources>
