designing Events List Fragment, adding recycler, adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Check-in em Eventos</string>
     <string name="events_list">Lista de Eventos</string>
+    <string name="event_details">Detalhes do Evento</string>
 </resources>
