--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Check-in em Eventos</string>
     <string name="events_list">Lista de Eventos</string>
     <string name="event_details">Detalhes do Evento</string>
+    <string name="subscription">Inscreva-se!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
